force-app/main/default/objects/Leave__c/fields/Approved_By_Initials__c.field-meta.xml
<CustomField>
    <fullName>Approved_By_Initials__c</fullName>
    <label>Approved By Initials</label>
    <length>5</length>
    <type>Text</type>
</CustomField>