force-app/main/default/objects/Leave__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Leave Applications (Approver)</relationshipLabel>
    <relationshipName>Canonical_Leave_Applications_Approver</relationshipName>
    <type>Lookup</type>
</CustomField>