force-app/main/default/objects/Leave__c/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <description
  >This field categorizes the type of activity or task performed by the portal user. It is used to track, group, and report on time spent across different operational areas such as development, training, leaves, and meetings.</description>
    <inlineHelpText
  >Select the category that best describes the primary type of work or activity you performed during this logged time</inlineHelpText>
    <label>Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administrative / Setup</fullName>
            </value>
            <value>
                <fullName>Client Meetings &amp; Support</fullName>
            </value>
            <value>
                <fullName>Internal Meetings &amp; Standups</fullName>
            </value>
            <value>
                <fullName>Leave - Annual / PTO</fullName>
            </value>
            <value>
                <fullName>Leave - Maternity / Paternity</fullName>
            </value>
            <value>
                <fullName>Leaves / Time Off</fullName>
            </value>
            <value>
                <fullName>Leave - Sick / Medical</fullName>
            </value>
            <value>
                <fullName>Leave - Unpaid</fullName>
            </value>
            <value>
                <fullName>Project Work / Development</fullName>
            </value>
            <value>
                <fullName>Training &amp; Certifications</fullName>
            </value>
            <value>
                <fullName>Gazetted Holiday Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>