force-app/main/default/objects/Leave__c/fields/Certificate_Required__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Required</label>
    <type>Checkbox</type>
</CustomField>