force-app/main/default/objects/Leave__c/fields/End_Date_Next_ICS__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Next_ICS__c</fullName>
    <formula>TEXT( YEAR( End_Date__c + 1 ) )
&amp; IF( LEN( TEXT( MONTH( End_Date__c + 1 ) ) ) = 1, &quot;0&quot;, &quot;&quot; )
&amp; TEXT( MONTH( End_Date__c + 1 ) )
&amp; IF( LEN( TEXT( DAY( End_Date__c + 1 ) ) ) = 1, &quot;0&quot;, &quot;&quot; )
&amp; TEXT( DAY( End_Date__c + 1 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date Next ICS</label>
    <type>Text</type>
</CustomField>