force-app/main/default/objects/Leave__c/fields/Half_Day__c.field-meta.xml
<CustomField>
    <fullName>Half_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Half Day</label>
    <type>Checkbox</type>
</CustomField>