force-app/main/default/objects/Leave__c/fields/Half_Day_Session__c.field-meta.xml
<CustomField>
    <fullName>Half_Day_Session__c</fullName>
    <label>Half Day Session</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Session 1</fullName>
            </value>
            <value>
                <fullName>Session 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>