force-app/main/default/objects/Leave__c/fields/isHalfDay__c.field-meta.xml
<CustomField>
    <fullName>isHalfDay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isHalfDay?</label>
    <type>Checkbox</type>
</CustomField>