force-app/main/default/objects/Leave__c/fields/Leave_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Leave_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leave Allocation</label>
    <referenceTo>PWChrono_Leave_Allocation__c</referenceTo>
    <relationshipLabel>Leave Applications</relationshipLabel>
    <relationshipName>Canonical_Leave_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>