force-app/main/default/objects/Leave__c/fields/Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Manager_Notes__c</fullName>
    <label>Manager Notes</label>
    <type>TextArea</type>
</CustomField>