force-app/main/default/objects/Leave__c/fields/Portal_User_By_Initials__c.field-meta.xml
<CustomField>
    <fullName>Portal_User_By_Initials__c</fullName>
    <formula>UPPER(
  IF( LEN(  Portal_User__r.Contact__r.FirstName ) &gt; 0, LEFT( Portal_User__r.Contact__r.FirstName, 1 ), &quot;&quot; )
&amp; IF( LEN( Portal_User__r.Contact__r.LastName) &gt; 0, LEFT( Portal_User__r.Contact__r.LastName, 1 ), &quot;&quot; )
)</formula>
    <label>Portal User Initials</label>
    <type>Text</type>
</CustomField>