force-app/main/default/objects/Leave__c/fields/Portal_Users__c.field-meta.xml
<CustomField>
    <fullName>Portal_Users__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Users</label>
    <referenceTo>Portal_Users__c</referenceTo>
    <relationshipLabel>Leave Portal Users</relationshipLabel>
    <relationshipName>Canonical_Leave_Portal_Users</relationshipName>
    <type>Lookup</type>
</CustomField>