force-app/main/default/objects/Leave__c/fields/Start_Date_ICS__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_ICS__c</fullName>
    <formula>TEXT( YEAR( Start_Date__c ) )
&amp; IF( LEN( TEXT( MONTH( Start_Date__c ) ) ) = 1, &quot;0&quot;, &quot;&quot; )
&amp; TEXT( MONTH( Start_Date__c ) )
&amp; IF( LEN( TEXT( DAY( Start_Date__c ) ) ) = 1, &quot;0&quot;, &quot;&quot; )
&amp; TEXT( DAY( Start_Date__c ) )</formula>
    <label>Start Date ICS</label>
    <type>Text</type>
</CustomField>