force-app/main/default/objects/Leave__c/fields/Total_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_of_Hours__c</fullName>
    <formula>TEXT(
  IF(
    isHalfDay__c,
    4,
    Total_Days__c * 8
  )
)
&amp; &quot; Hours (8 hours/day)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total # of Hours</label>
    <type>Text</type>
</CustomField>