force-app/main/default/objects/Leave__c/fields/Working_Days_Excluded__c.field-meta.xml
<CustomField>
    <fullName>Working_Days_Excluded__c</fullName>
    <label>Working Days Excluded</label>
    <precision>5</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>