force-app/main/default/objects/Leave__c/listViews/Pending_Approvals.listView-meta.xml
<ListView>
    <fullName>Pending_Approvals</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Leave_Type__c</columns>
    <columns>From_Date__c</columns>
    <columns>To_Date__c</columns>
    <columns>Total_Days__c</columns>
    <columns>Applied_Date__c</columns>
    <columns>Reason__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Pending Approvals</label>
</ListView>